fix: Add Support for Aligned Columns + Adjust Alerts Alignment (#127)
* column alignment initial code

* align column story

* center align alerts

--- a/src/components/alert/Alert.module.css
+++ b/src/components/alert/Alert.module.css
@@ -1,3 +1,3 @@
 .alert {
-  width: 25rem;
+  width: 40rem;
 }
